add validation, fix open api
