# bands_service/api.yaml
@@ -9,7 +9,7 @@ tags:
     description: дополнительные операции
 servers:
   - description: Development
-    url: http://localhost:7008
+    url: https://localhost:7008
 
 paths:
   /musicbands-util/bands:
@@ -111,7 +111,7 @@ paths:
         content:
           application/xml:
             schema:
-              $ref: '#/components/schemas/MusicBandPostBody'
+              $ref: '#/components/schemas/MusicBandDTO'
       responses:
         '201':
           description: Успешный ответ
@@ -162,6 +162,13 @@ paths:
           schema:
             type: string
             example: id
+        - name: search
+          in: query
+          description: Фильтрация по полю
+          required: false
+          schema:
+            type: string
+            example: numberOfParticipants>5
       responses:
         '200':
           description: Успешный ответ
@@ -234,7 +241,7 @@ paths:
         content:
           application/xml:
             schema:
-              $ref: '#/components/schemas/MusicBandPostBody'
+              $ref: '#/components/schemas/MusicBandDTO'
             examples:
               example1:
                 summary: Пример запроса
@@ -380,7 +387,7 @@ components:
           length: 45
           sales: 10000
     
-    MusicBandPostBody:
+    MusicBandDTO:
       type: object
       properties:
         name:
